--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appc-aar-tools",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Tools for working with Android Archive files",
   "keywords": [
     "appcelerator",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "deepmerge": "^1.3.2",
     "extract-zip": "^1.6.0",
     "findit2": "^2.2.3",
     "fs-extra": "^1.0.0",
