--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appc-aar-tools",
-  "version": "1.1.3",
+  "version": "1.1.4‚",
   "description": "Tools for working with Android Archive files",
   "keywords": [
     "appcelerator",
