--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.5",
   "description": "Tools for working with Android Archive files",
   "scripts": {
-    "test": "nyc jasmine test/**/*.spec.js"
+    "test": "nyc jasmine --reporter=jasmine-junit-reporter test/**/*.spec.js"
   },
   "keywords": [
     "appcelerator",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "jasmine": "^3.1.0",
+    "jasmine-junit-reporter": "0.0.2",
     "nyc": "^12.0.2",
     "rimraf": "^2.6.2"
   }
