--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "xmldom": "^0.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
     "nyc": "^15.1.0",
