--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
     "nyc": "^15.1.0",
