chore: add commitlint config

--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "jasmine-junit-reporter": "0.0.2",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2"
-  }
+  },
+	"commitlint": {
+		"extends": [
+		  "@commitlint/config-conventional"
+		]
+	}
 }
