--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "husky": "^4.3.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2"
   },
-	"commitlint": {
-		"extends": [
-		  "@commitlint/config-conventional"
-		]
-	}
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  }
 }
