--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^4.3.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
+    "lint-staged": "^10.4.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2"
   },
