--- a/package.json
+++ b/package.json
@@ -50,5 +50,11 @@
   },
   "lint-staged": {
 		"*.js": "eslint"
+  },
+  "husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
 	}
 }
