--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "eslint": "^7.11.0",
     "husky": "^4.3.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
@@ -49,12 +50,12 @@
     ]
   },
   "lint-staged": {
-		"*.js": "eslint"
+    "*.js": "eslint"
   },
   "husky": {
-		"hooks": {
-			"pre-commit": "lint-staged",
-			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-		}
-	}
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
