--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "eslint": "^7.11.0",
+    "eslint-config-axway": "^5.0.0",
     "husky": "^4.3.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
