--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "eslint": "^7.11.0",
     "eslint-config-axway": "^5.0.0",
+    "eslint-plugin-jasmine": "^4.1.1",
     "husky": "^4.3.0",
     "jasmine": "^3.1.0",
     "jasmine-junit-reporter": "0.0.2",
